Changed css for spacing issues
1. Changed link for shards to go to songs-poems-thoughts.php
2. Adjusted spacing for titles on most pages
3. Altered css on syles3.css

--- a/styles/styles3.css
+++ b/styles/styles3.css
@@ -353,7 +353,8 @@ a:hover {
     font-weight: bold;
     text-align: center;
     font-family: "lucida calligraphy",arial,'sans serif';
-    margin-top: 1.2%;
+    margin-top: 3%;
+    margin-bottom: .8%;
 }
 
 .small-header {
